# opencv_simple

./: CMakeLists.txt  README.md  package.xml
src/: opencv_simple.cpp
