<?xml version="1.0"?>
<package>
  <name>opencv_simple</name>
  <version>0.0.0</version>
  <description>The opencv_simple package</description>
  <maintainer email="walter@todo.todo">walter</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

</package>
